# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] fix/change
# ====================================================================


# 2016-12-06
# --------------------------------------------------------------------
# + cut release v1.1 based off of 14-set-bkg-activity.py
# ~ it's working! v14 vs v20 is basically identical! Woo Hoo!!
# ~ hacked a bunch of stuff in 20-global-input-file.py to get this
#   working - I'm sure there's some bugs yet to fix
# ~ fixed dataDRU2()
# ~ the set bkgs activities are now plotted seperatly
# ~ changed a bunch of stuff in 20-global-input-file.py to allow for
#   the new text list based format


# 2016-12-05
# --------------------------------------------------------------------
# ~ applied same fix "range(fLoBins,fbins)" to 20-global-input-file.py
# ~ fixed a bug in 14-set-bkg-activity.py...
#   line 307 should be "range(fLoBins,fbins)" and not
#   "range(fLoBins)" - didn't make much difference in the fitting
#   results? I don't understand that, but a bug none the less.
# + added new dataDRU2() function
# + use funcs2.py with buildMC2(), getData2(), and readROOT2()


# 2016-11-29
# --------------------------------------------------------------------
# + scale non dur1/dru2 rebinned errors by the rebinning/sqrt(2)
#   I'm not sure if this is physics right, but it looks about right
#   in the plots. I'll need to check this again...
# + many additions to set the internal K40 activity, it
#   seems to be working? I'm sure I'll find some bugs...
# + set internal k40 as a fixed activity background
# ~ tweaked funcs.py to have mc[loc][iso]['act'] = -1 by default
#   in readROOT()
# + switch to 14-set-bkg-activity.py


# 2016-11-29
# --------------------------------------------------------------------
# + cut release v1.0 based off of 13-data-dru.py